--- a/Frontend/src/app/create-admin/create-admin.component.html
+++ b/Frontend/src/app/create-admin/create-admin.component.html
@@ -5,9 +5,12 @@
       <mat-card-header>
         <mat-card-title
           style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Create
-          Admin</mat-card-title>
+          Admin
           <mat-icon (click)="openCreateAdminTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-          style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+                    style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+        </mat-card-title>
+          <!--<mat-icon (click)="openCreateAdminTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+          style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>-->
           <mat-card-subtitle>
 
           <table style="width:100%;" cellspacing="0">
