--- a/Frontend/src/app/edit-branch/edit-branch/edit-branch.component.html
+++ b/Frontend/src/app/edit-branch/edit-branch/edit-branch.component.html
@@ -2,9 +2,12 @@
     <mat-card style="width: 550px; margin-top: 1%; display: flex; justify-content: center; align-items: center; ">
       <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmit()">
         <mat-card-header>
-          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align: center;">Edit Branch</mat-card-title>
-          <mat-icon (click)="openEditBranchTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-          style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align: center;">
+            Edit Branch
+            <mat-icon (click)="openEditBranchTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+                      style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+          </mat-card-title>
+          
           <mat-card-subtitle style="justify-content: center; align-items: center;">
   
             <table style="width:100%;" cellspacing="0">
