--- a/Frontend/src/app/Delegation/reject-delegation/reject-delegation.component.html
+++ b/Frontend/src/app/Delegation/reject-delegation/reject-delegation.component.html
@@ -1,9 +1,14 @@
-<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;"
-    *ngIf="showConfirmationDialog == true">
-  REVOKE TEMPORARY ACCESS
+<div style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
+  <h1 mat-dialog-title style="color: white;"
+      *ngIf="showConfirmationDialog == true">
+    REVOKE TEMPORARY ACCESS
+
+  </h1>
   <mat-icon (click)="openRevokeDelegationTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-  style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
-</h1>
+            style="font-size: 24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
+</div>
+
+
 
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
   <p>
