--- a/Frontend/src/app/create-budget-category/create-budget-category.component.html
+++ b/Frontend/src/app/create-budget-category/create-budget-category.component.html
@@ -1,5 +1,5 @@
 <div style="display: flex; justify-content: center; align-items: center;">
-    <mat-card style="width: 600px; margin-top: 1%; align-items: center; ">
+    <mat-card style="width: 600px; margin-top: 1%; display: flex; justify-content: center; align-items: center; ">
         <form [formGroup]="budgetCategoryForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center"
             fxLayoutGap="10px" (ngSubmit)="onSubmit()">
             <mat-card-header>
@@ -8,51 +8,63 @@
                     Budget Category</mat-card-title>
                     <mat-icon (click)="openCreateBCTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
                     style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
-                <mat-card-subtitle>
-                    <table style="width:100%;" cellspacing="0">
-                        <tr>
-                            <td style="width:100%;">
-                                <mat-card-content>
-                                    <label style=" color:black;">Name:</label>
-                                    <br />
-                                    <mat-form-field>
-                                        <input matInput type="text" placeholder="" formControlName="account_Name"
-                                            id="account_Name" required>
-                                        <mat-hint align="end">Not more than 32 characters long.</mat-hint>
-                                        <mat-error *ngIf="myError('account_Name', 'required')">Name is
-                                            required</mat-error>
-                                        <mat-error *ngIf="myError('account_Name', 'minlength')">Name must be 3 to 32
-                                            characters
-                                            long</mat-error>
-                                        <mat-error *ngIf="myError('account_Name', 'maxlength')">Limit
-                                            exceeded</mat-error>
-                                        <mat-error *ngIf="myError('account_Name', 'pattern')">Name can not contain
-                                            numbers</mat-error>
-                                    </mat-form-field>
-                                </mat-card-content>
-                            </td>
-                            <td style="width:100%;">
-                                <mat-card-content>
-                                    <label style=" color:black;">Description:</label>
-                                    <br />
-                                    <mat-form-field>
-                                        <input matInput type="text" placeholder="" formControlName="description"
-                                            id="description" required>
-                                        <mat-hint align="end">Not more than 50 characters long.</mat-hint>
-                                        <mat-error *ngIf="myError('description', 'required')">Description is
-                                            required</mat-error>
-                                        <mat-error *ngIf="myError('description', 'minlength')">Description must be 3 to
-                                            50 characters long</mat-error>
-                                        <mat-error *ngIf="myError('description', 'maxlength')">Limit
-                                            exceeded</mat-error>
-                                        <mat-error *ngIf="myError('description', 'pattern')">Description can not contain
-                                            symbols</mat-error>
-                                    </mat-form-field>
-                                </mat-card-content>
-                            </td>
-                        </tr>
-                    </table>
-                </mat-card-subtitle>
+                    <mat-card-subtitle style="justify-content: center; align-items: center;">
+
+                      <label style="display: flex; justify-content: center; align-items: center; margin-right: 228px; color: black;">Name:</label>
+                      <mat-card-content style="display: flex; justify-content: center; align-items: center;">
+
+
+                        <mat-form-field style="width: 60%;">
+                          <input matInput type="text" placeholder="" formControlName="account_Name"
+                                 id="account_Name" required>
+                          <mat-hint align="end">Not more than 150 characters long.</mat-hint>
+                          <mat-error *ngIf="myError('account_Name', 'required')">
+                            Name is
+                            required
+                          </mat-error>
+                          <mat-error *ngIf="myError('account_Name', 'minlength')">
+                            Name must be 3 to 150
+                            characters
+                            long
+                          </mat-error>
+                          <mat-error *ngIf="myError('account_Name', 'maxlength')">
+                            Limit
+                            exceeded
+                          </mat-error>
+                          <mat-error *ngIf="myError('account_Name', 'pattern')">
+                            Name can not contain
+                            numbers
+                          </mat-error>
+                        </mat-form-field>
+                      </mat-card-content>
+                      <br />
+                      <label style="display: flex; justify-content: center; align-items: center; margin-right: 188px; color: black;">Description:</label>
+                      <mat-card-content style="display: flex; justify-content: center; align-items: center;">
+
+
+                        <mat-form-field style="width: 60%;">
+                          <textarea matInput type="text" placeholder="" formControlName="description"
+                                    id="description" required></textarea>
+                          <mat-hint align="end">Not more than 200 characters long.</mat-hint>
+                          <mat-error *ngIf="myError('description', 'required')">
+                            Description is
+                            required
+                          </mat-error>
+                          <mat-error *ngIf="myError('description', 'minlength')">
+                            Description must be 3 to
+                            200 characters long
+                          </mat-error>
+                          <mat-error *ngIf="myError('description', 'maxlength')">
+                            Limit
+                            exceeded
+                          </mat-error>
+                          <mat-error *ngIf="myError('description', 'pattern')">
+                            Description can not contain
+                            symbols
+                          </mat-error>
+                        </mat-form-field>
+                      </mat-card-content>
+                    </mat-card-subtitle>
             </mat-card-header>
             <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
               <!--<button mat-raised-button type="submit"
