--- a/Frontend/src/app/create-budget-line/create-budget-line.component.html
+++ b/Frontend/src/app/create-budget-line/create-budget-line.component.html
@@ -5,9 +5,11 @@
             <mat-card-header>
                 <mat-card-title
                     style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Create
-                    Budget Line</mat-card-title>
-                    <mat-icon (click)="openCreateBLTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-                    style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+                    Budget Line
+                  <mat-icon (click)="openCreateBLTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+                            style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+              </mat-card-title>
+                    
                 <mat-card-subtitle>
                     <table style="width:100%;" cellspacing="0">
                         <tr>
