--- a/Frontend/src/app/create-department/create-department/create-department.component.html
+++ b/Frontend/src/app/create-department/create-department/create-department.component.html
@@ -2,13 +2,15 @@
     <mat-card style="width: 550px; margin-top: 1%; display: flex; justify-content: center; align-items: center; ">
       <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmit()">
         <mat-card-header>
-          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">Create Department</mat-card-title>
-          <mat-icon (click)="openCreateDepartmentTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-        style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+          <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">
+            Create Department
+            <mat-icon (click)="openCreateDepartmentTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+                      style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+          </mat-card-title>
+          
           <mat-card-subtitle style="justify-content: center; align-items: center;">
-  
-            <mat-card-content style="margin-left:10%;">
-              <label style="margin-right:11%; color:black;">Name:</label>
+            <label style="display: flex; justify-content: center; align-items: center; margin-right: 172px; color: black;">Name:</label>
+            <mat-card-content style="display: flex; justify-content: center; align-items: center;">
               <mat-form-field>
                 <input matInput type="text" placeholder="" formControlName="name" id="name">
                 <mat-hint align="end">Not more then 32 characters long.</mat-hint>
@@ -19,10 +21,10 @@
               </mat-form-field>
             </mat-card-content>
             <br />
-            <mat-card-content style="margin-left:10%;">
-              <label style="margin-right: 2.3%; color: black;">Description:</label>
-              <mat-form-field>
-                <input matInput type="text" placeholder="" formControlName="description" id="description">
+            <label style="display: flex; justify-content: center; align-items: center; margin-right: 188px; color: black;">Description:</label>
+            <mat-card-content style="display: flex; justify-content: center; align-items: center;">
+              <mat-form-field style="width: 66%;">
+                <textarea matInput type="text" placeholder="" formControlName="description" id="description"></textarea>
                 <mat-hint align="end">Not more then 50 characters long.</mat-hint>
                 <mat-error *ngIf="myError('description', 'required')">Description is required</mat-error>
                 <mat-error *ngIf="myError('description', 'maxlength')">Limit exceed</mat-error>
@@ -30,7 +32,7 @@
                 <mat-error *ngIf="myError('description', 'minlength')">Description must be 2 to 50 characters long</mat-error>
               </mat-form-field>
             </mat-card-content>
-  
+
           </mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
