--- a/Frontend/src/app/create-employee-role/create-employee-role.component.html
+++ b/Frontend/src/app/create-employee-role/create-employee-role.component.html
@@ -7,35 +7,38 @@
           Roles</mat-card-title>
           <mat-icon (click)="openCreateRoleTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
           style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
-        <mat-card-subtitle style="justify-content: center; align-items: center;">
+          <mat-card-subtitle style="justify-content: center; align-items: center;">
+            <label style="display: flex; justify-content: center; align-items: center; margin-right: 172px; color: black;">Name:</label>
+            <mat-card-content style="display: flex; justify-content: center; align-items: center;">
 
-          <mat-card-content style="margin-left:10%;">
-            <label style="margin-right:11%; color:black;">Name:</label>
-            <mat-form-field>
-              <input matInput type="text" placeholder="E.g. HR" formControlName="Name" id="Name">
-              <mat-hint align="end">Not more than 32 characters long.</mat-hint>
-              <mat-error *ngIf="myError('Name', 'required')">Name is required</mat-error>
-              <mat-error *ngIf="myError('Name', 'maxlength')">Limit exceed</mat-error>
-              <mat-error *ngIf="myError('Name', 'minlength')">Name must be 2 to 32 characters long</mat-error>
-              <mat-error *ngIf="myError('Name', 'pattern')">Name can not contain numbers</mat-error>
-            </mat-form-field>
-          </mat-card-content>
-          <br />
-          <mat-card-content style="margin-left:10%;">
-            <label style="margin-right: 2.3%; color: black;">Description:</label>
-            <mat-form-field>
-              <input matInput type="text" placeholder="E.g. Human Resources" formControlName="Description"
-                id="Description">
-              <mat-hint align="end">Not more than 50 characters long.</mat-hint>
-              <mat-error *ngIf="myError('Description', 'required')">Description is required</mat-error>
-              <mat-error *ngIf="myError('Description', 'maxlength')">Limit exceed</mat-error>
-              <mat-error *ngIf="myError('Description', 'pattern')">Description can not contain numbers</mat-error>
-              <mat-error *ngIf="myError('Description', 'minlength')">Description must be 2 to 50 characters
-                long</mat-error>
-            </mat-form-field>
-          </mat-card-content>
+              <mat-form-field>
+                <input matInput type="text" placeholder="E.g. HR" formControlName="Name" id="Name">
+                <mat-hint align="end">Not more than 32 characters long.</mat-hint>
+                <mat-error *ngIf="myError('Name', 'required')">Name is required</mat-error>
+                <mat-error *ngIf="myError('Name', 'maxlength')">Limit exceed</mat-error>
+                <mat-error *ngIf="myError('Name', 'minlength')">Name must be 2 to 32 characters long</mat-error>
+                <mat-error *ngIf="myError('Name', 'pattern')">Name can not contain numbers</mat-error>
+              </mat-form-field>
+            </mat-card-content>
+            <br />
+            <label style="display: flex; justify-content: center; align-items: center; margin-right: 188px; color: black;">Description:</label>
+            <mat-card-content style="display: flex; justify-content: center; align-items: center;">
 
-        </mat-card-subtitle>
+              <mat-form-field style="width: 61%;">
+                <textarea matInput type="text" placeholder="E.g. Human Resources" formControlName="Description"
+                       id="Description"></textarea>
+                <mat-hint align="end">Not more than 50 characters long.</mat-hint>
+                <mat-error *ngIf="myError('Description', 'required')">Description is required</mat-error>
+                <mat-error *ngIf="myError('Description', 'maxlength')">Limit exceed</mat-error>
+                <mat-error *ngIf="myError('Description', 'pattern')">Description can not contain numbers</mat-error>
+                <mat-error *ngIf="myError('Description', 'minlength')">
+                  Description must be 2 to 50 characters
+                  long
+                </mat-error>
+              </mat-form-field>
+            </mat-card-content>
+
+          </mat-card-subtitle>
       </mat-card-header>
       <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
 
