--- a/Frontend/src/app/create-help/create-help/create-help.component.html
+++ b/Frontend/src/app/create-help/create-help/create-help.component.html
@@ -30,49 +30,6 @@
                 </td>
                 <td style="width:100%;">
                   <mat-card-content>
-                    <label style=" color: black;">Description:</label>
-                    <br />
-                    <mat-form-field>
-                      <input matInput type="text" placeholder="E.g. process for deleting a Mandate Limite" formControlName="description"
-                             id="description" required>
-                      <mat-hint align="end">Not more than 50 characters long.</mat-hint>
-                      <mat-error *ngIf="myError('description', 'required')">Description is required</mat-error>
-                      <mat-error *ngIf="myError('description', 'maxlength')">Limit exceed</mat-error>
-                      <mat-error *ngIf="myError('description', 'pattern')">DescripTion can not contain numbers</mat-error>
-                      <mat-error *ngIf="myError('description', 'minlength')">
-                        Description must be 2 to 50 characters
-                        long
-                      </mat-error>
-                    </mat-form-field>
-                  </mat-card-content>
-                </td>
-              </tr>
-              <tr>
-                <td style="width:100%;">
-                  <mat-card-content>
-                    <label style=" color:black;">Help Video:</label>
-                    <br />
-  
-                    <input type="file" id="file" placeholder="" formControlName="video" style="border: solid #244688; border-radius: 5px; "
-                           accept="video/*" (change)="onVideoFileUpload($event)" required>
-  
-                  </mat-card-content>
-                </td>
-                    <td style="width:100%;">
-                      <mat-card-content>
-                        
-                        <label style=" color:black;">User Manual:</label>
-                        <br />
-      
-                        <input type="file" id="file" placeholder="" formControlName="user_Manual" style="border: solid #244688; border-radius: 5px; "
-                               accept=".pdf" (change)="onPDFFileUpload($event)" required>
-                        
-                      </mat-card-content>
-                    </td>
-              </tr>
-              <tr>
-                <td style="width:100%;">
-                  <mat-card-content>
                     <label style=" color:black;">Category</label>
                     <br />
                     <mat-form-field>
@@ -82,6 +39,52 @@
                         <mat-option *ngFor="let t of help_Categorys" [value]="t">{{t.name}}</mat-option>
                       </mat-select>
                       <mat-error *ngIf="myError('help_Category_ID', 'required')">Please choose a Categpry</mat-error>
+                    </mat-form-field>
+                  </mat-card-content>
+                </td>
+                
+              </tr>
+              <tr>
+                <td style="width:100%;">
+                  <mat-card-content>
+                    <label style=" color:black;">Help Video:</label>
+                    <br />
+
+                    <input type="file" id="file" placeholder="" formControlName="video" style="border: solid #244688; border-radius: 5px; "
+                           accept="video/*" (change)="onVideoFileUpload($event)" required>
+
+                  </mat-card-content>
+                </td>
+                <td style="width:100%;">
+                  <mat-card-content>
+
+                    <label style=" color:black;">User Manual:</label>
+                    <br />
+
+                    <input type="file" id="file" placeholder="" formControlName="user_Manual" style="border: solid #244688; border-radius: 5px; "
+                           accept=".pdf" (change)="onPDFFileUpload($event)" required>
+
+                  </mat-card-content>
+                </td>
+                
+              </tr>
+              <tr>
+               
+                <td colspan="2">
+                  <mat-card-content>
+                    <label style=" color: black;">Description:</label>
+                    <br />
+                    <mat-form-field style="width: 100%">
+                      <textarea matInput type="text" placeholder="E.g. process for deleting a Mandate Limite" formControlName="description"
+                             id="description" required></textarea>
+                      <mat-hint align="end">Not more than 50 characters long.</mat-hint>
+                      <mat-error *ngIf="myError('description', 'required')">Description is required</mat-error>
+                      <mat-error *ngIf="myError('description', 'maxlength')">Limit exceed</mat-error>
+                      <mat-error *ngIf="myError('description', 'pattern')">DescripTion can not contain numbers</mat-error>
+                      <mat-error *ngIf="myError('description', 'minlength')">
+                        Description must be 2 to 50 characters
+                        long
+                      </mat-error>
                     </mat-form-field>
                   </mat-card-content>
                 </td>
