--- a/Frontend/src/app/delete-employee/delete-employee.component.html
+++ b/Frontend/src/app/delete-employee/delete-employee.component.html
@@ -26,3 +26,8 @@
     <p>The employee "{{ Employee.employeeName }}" has been <strong style="color:red">DELETED</strong> successfully.</p>
   </div>
 </ng-container>
+
+
+<!--<div style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
+
+</div>-->
