--- a/Frontend/src/app/delete-mandate-limit/delete-mandate-limit.component.html
+++ b/Frontend/src/app/delete-mandate-limit/delete-mandate-limit.component.html
@@ -1,9 +1,12 @@
-<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;"
-    *ngIf="showConfirmationDialog == true">DELETE MANDATE LIMIT
-    <mat-icon (click)="openDeleteMandateTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-    style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
+<div style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
+  <h1 mat-dialog-title style="color: white;"
+      *ngIf="showConfirmationDialog == true">
+    DELETE MANDATE LIMIT
+  </h1>
+  <mat-icon (click)="openDeleteMandateTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+            style="font-size: 24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
+</div>
 
-</h1>
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
     <p>You are about to delete the Mandate Limit with amount: <strong>{{mandateLimit.ammount }}</strong></p>
     <p>Are you sure you want to continue?</p>
