--- a/Frontend/src/app/delete-procurement-request/delete-procurement-request.component.html
+++ b/Frontend/src/app/delete-procurement-request/delete-procurement-request.component.html
@@ -1,8 +1,13 @@
-<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center;  display: flex; justify-content: space-between;"
-    *ngIf="showConfirmationDialog == true">DELETE PROCUREMENT REQUEST
-    <mat-icon (click)="openDeletePRTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-    style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
-</h1>
+<div style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
+  <h1 mat-dialog-title style="color: white;"
+      *ngIf="showConfirmationDialog == true">
+    DELETE PROCUREMENT REQUEST
+  </h1>
+  <mat-icon (click)="openDeletePRTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+            style="font-size: 24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
+</div>
+
+
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
     <p>You are about to delete the request for: <strong>{{Procurement_Request.name}}</strong></p>
     <p>Are you sure you want to continue?</p>
