--- a/Frontend/src/app/edit-admin/edit-admin.component.html
+++ b/Frontend/src/app/edit-admin/edit-admin.component.html
@@ -5,11 +5,13 @@
     <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px"
       (ngSubmit)="onSubmit()">
       <mat-card-header>
-        <mat-card-title
-          style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Edit
-          Admin Information</mat-card-title>
+        <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">
+          Edit
+          Admin Information
           <mat-icon (click)="openEditAdminTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-          style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+                    style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+        </mat-card-title>
+          
           <mat-card-subtitle>
 
               <table style="width:100%;" cellspacing="0">
