--- a/Frontend/src/app/edit-budget-line/edit-budget-line.component.html
+++ b/Frontend/src/app/edit-budget-line/edit-budget-line.component.html
@@ -3,11 +3,13 @@
         <form [formGroup]="budgetLineForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center"
             fxLayoutGap="10px" (ngSubmit)="onSubmit()">
             <mat-card-header>
-                <mat-card-title
-                    style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Edit
-                    Budget Line</mat-card-title>
-                    <mat-icon (click)="openEditBLTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-        style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+              <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">
+                Edit
+                Budget Line
+                <mat-icon (click)="openEditBLTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+                          style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+              </mat-card-title>
+                    
                 <mat-card-subtitle>
                     <table style="width:100%;" cellspacing="0">
                         <tr>
