--- a/Frontend/src/app/edit-employee-role/edit-employee-role.component.html
+++ b/Frontend/src/app/edit-employee-role/edit-employee-role.component.html
@@ -4,13 +4,15 @@
     <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmit()">
 
       <mat-card-header>
-        <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">Edit Employee Roles</mat-card-title>
-        <mat-icon (click)="openEditRoleTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-        style="font-size:30pt; height: 40px; width: 37px; "  [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+        <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%;">
+          Edit Employee Roles
+          <mat-icon (click)="openEditRoleTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+                    style="font-size:30pt; height: 40px; width: 37px; " [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+        </mat-card-title>
+        
         <mat-card-subtitle style="justify-content: center; align-items: center;">
-
-          <mat-card-content style="margin-left:10%;">
-            <label style="margin-right:11%; color:black;" for="Name">Name:</label>
+          <label style="display: flex; justify-content: center; align-items: center; margin-right: 172px; color: black;">Name:</label>
+          <mat-card-content style="display: flex; justify-content: center; align-items: center;">
             <mat-form-field>
               <input matInput type="text" placeholder="" formControlName="Name" id="Name">
               <mat-hint align="end">Not more then 32 characters long.</mat-hint>
@@ -22,11 +24,10 @@
           </mat-card-content>
 
           <br />
-
-          <mat-card-content style="margin-left:10%;">
-            <label style="margin-right: 2.3%; color: black;" for="Description">Description:</label>
-            <mat-form-field>
-              <input matInput type="text" placeholder="" formControlName="Description" id="Description">
+          <label style="display: flex; justify-content: center; align-items: center; margin-right: 188px; color: black;">Description:</label>
+          <mat-card-content style="display: flex; justify-content: center; align-items: center;">
+            <mat-form-field style="width: 62%;">
+              <textarea matInput type="text" placeholder="" formControlName="Description" id="Description"></textarea>
               <mat-hint align="end">Not more then 50 characters long.</mat-hint>
               <mat-error *ngIf="myError('Description', 'required')">Description is required</mat-error>
               <mat-error *ngIf="myError('Description', 'maxlength')">Limit exceed</mat-error>
