--- a/Frontend/src/app/edit-employee/edit-employee.component.html
+++ b/Frontend/src/app/edit-employee/edit-employee.component.html
@@ -4,9 +4,12 @@
   <mat-card style="width: 600px; margin-top: 1%; align-items: center; ">
     <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmit()">
       <mat-card-header>
-        <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">Edit Employee Information</mat-card-title>
-        <mat-icon (click)="openEditEmployeeTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-        style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+        <mat-card-title style="color: #244688; font-weight:700; font-size:32pt; margin-bottom:5%; text-align:center;">
+          Edit Employee Information
+          <mat-icon (click)="openEditEmployeeTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+                    style="font-size:30pt; height: 37px; width: 37px;" [ngStyle]="{'color':'#244688'}" matTooltip="Need help? Click me!"></mat-icon>
+        </mat-card-title>
+       
         <mat-card-subtitle>
 
               <table style="width:100%;" cellspacing="0">
