--- a/Frontend/src/app/edit-help/edit-help/edit-help.component.html
+++ b/Frontend/src/app/edit-help/edit-help/edit-help.component.html
@@ -30,19 +30,15 @@
               </td>
               <td style="width:100%;">
                 <mat-card-content>
-                  <label style=" color: black;">Description:</label>
+                  <label style=" color:black;">Category</label>
                   <br />
                   <mat-form-field>
-                    <input matInput type="text" placeholder="E.g. process for deleting a Mandate Limite" formControlName="description"
-                           id="description" required>
-                    <mat-hint align="end">Not more than 50 characters long.</mat-hint>
-                    <mat-error *ngIf="myError('description', 'required')">Description is required</mat-error>
-                    <mat-error *ngIf="myError('description', 'maxlength')">Limit exceed</mat-error>
-                    <mat-error *ngIf="myError('description', 'pattern')">DescripTion can not contain numbers</mat-error>
-                    <mat-error *ngIf="myError('description', 'minlength')">
-                      Description must be 2 to 50 characters
-                      long
-                    </mat-error>
+                    <mat-label>Choose one</mat-label>
+                    <mat-select formControlName="help_Category_ID" required>
+                      <mat-option>---</mat-option>
+                      <mat-option *ngFor="let hc of help_Categorys" [value]="hc.help_Category_ID">{{hc.name}}</mat-option>
+                    </mat-select>
+                    <mat-error *ngIf="myError('help_Category_ID', 'required')">Please choose a Categpry</mat-error>
                   </mat-form-field>
                 </mat-card-content>
               </td>
@@ -70,19 +66,24 @@
                   </td>
             </tr>
             <tr>
-              <td style="width:100%;">
+              <td colspan="2">
                 <mat-card-content>
-                  <label style=" color:black;">Category</label>
+                  <label style=" color: black;">Description:</label>
                   <br />
-                  <mat-form-field>
-                    <mat-label>Choose one</mat-label>
-                    <mat-select formControlName="help_Category_ID" required>
-                      <mat-option>---</mat-option>
-                      <mat-option *ngFor="let hc of help_Categorys" [value]="hc.help_Category_ID">{{hc.name}}</mat-option>
-                    </mat-select>
-                    <mat-error *ngIf="myError('help_Category_ID', 'required')">Please choose a Categpry</mat-error>
+                  <mat-form-field style="width:100%;">
+                    <textarea matInput type="text" placeholder="E.g. process for deleting a Mandate Limite" formControlName="description"
+                           id="description" required></textarea>
+                    <mat-hint align="end">Not more than 50 characters long.</mat-hint>
+                    <mat-error *ngIf="myError('description', 'required')">Description is required</mat-error>
+                    <mat-error *ngIf="myError('description', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('description', 'pattern')">DescripTion can not contain numbers</mat-error>
+                    <mat-error *ngIf="myError('description', 'minlength')">
+                      Description must be 2 to 50 characters
+                      long
+                    </mat-error>
                   </mat-form-field>
                 </mat-card-content>
+                
               </td>
             </tr>
           </table>
