--- a/Frontend/src/app/onboard_request/request-delete/request-delete.component.html
+++ b/Frontend/src/app/onboard_request/request-delete/request-delete.component.html
@@ -1,9 +1,13 @@
+<div style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: center; align-items: center;">
+  <h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;"
+      *ngIf="showConfirmationDialog == true">
+    DELETE ONBOARD REQUEST
+  </h1>
+  <mat-icon (click)="openDeleteOnboardRequestTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
+            style="font-size: 24pt; height: 37px; width: 37px; margin-bottom: 5px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
+</div>
 
-<h1 mat-dialog-title style="color: white; background-color: #244688; text-align: center; display: flex; justify-content: space-between;"
-    *ngIf="showConfirmationDialog == true">DELETE ONBOARD REQUEST
-    <mat-icon (click)="openDeleteOnboardRequestTab()" aria-hidden="false" aria-label="admin icon" fontIcon="help"
-        style="font-size:30pt; height: 37px; width: 37px; cursor: pointer;" [ngStyle]="{'color':'white'}" matTooltip="Need help? Click me!"></mat-icon>
-</h1>
+
 <div mat-dialog-content *ngIf="showConfirmationDialog == true">
     <p>You are about to delete the request no: <strong>{{data.ID}}</strong></p>
     <p>Containing The following company's:</p>
