--- a/Frontend/src/app/receive-procurement-item/receive-procurement-item.component.html
+++ b/Frontend/src/app/receive-procurement-item/receive-procurement-item.component.html
@@ -17,43 +17,50 @@
                                     <br />
                                     <mat-form-field>
                                         <input matInput type="text" placeholder="" formControlName="Name" id="Name"
-                                            [(ngModel)]="ConsumableRequest.consumable.name">
+                                            [(ngModel)]="ConsumableRequest.consumable.name" [readonly]="true">
                                     </mat-form-field>
                                 </mat-card-content>
                             </td>
                             <td style="width:100%;">
-                                <mat-card-content>
-                                    <label style=" color: black;">Description:</label>
-                                    <br />
-                                    <mat-form-field>
-                                        <input matInput type="text" placeholder="" formControlName="Description"
-                                            id="Surname" [(ngModel)]="ConsumableRequest.consumable.description"
-                                            required>
-                                        <mat-hint align="end">Not more then 50 characters long.</mat-hint>
-                                        <mat-error *ngIf="myError('Description', 'required')">Description is
-                                            required</mat-error>
-                                        <mat-error *ngIf="myError('Description', 'minlength')">Description must be 3 to
-                                            50 characters long</mat-error>
-                                        <mat-error *ngIf="myError('Description', 'maxlength')">Limit exceed</mat-error>
-                                        <mat-error *ngIf="myError('Description', 'pattern')">Description can not contain
-                                            symbols</mat-error>
-
-                                    </mat-form-field>
-                                </mat-card-content>
+                              <mat-card-content>
+                                <label style=" color:black;">Amount Received:</label>
+                                <br />
+                                <mat-form-field>
+                                  <input matInput type="number" placeholder="" formControlName="On_Hand"
+                                         id="Email" required>
+                                </mat-form-field>
+                              </mat-card-content>
                             </td>
                         </tr>
                         <tr>
 
-                            <td style="width:100%;">
-                                <mat-card-content>
-                                    <label style=" color:black;">Amount Received:</label>
-                                    <br />
-                                    <mat-form-field>
-                                        <input matInput type="number" placeholder="" formControlName="On_Hand"
-                                            id="Email" required>
-                                    </mat-form-field>
-                                </mat-card-content>
-                            </td>
+                          <td colspan="2">
+                            <mat-card-content>
+                              <label style=" color: black;">Description:</label>
+                              <br />
+                              <mat-form-field style="width:100%;">
+                                <textarea matInput type="text" placeholder="" formControlName="Description"
+                                       id="Surname" [(ngModel)]="ConsumableRequest.consumable.description"
+                                       required [readonly]="true"></textarea>
+                                <mat-hint align="end">Not more then 50 characters long.</mat-hint>
+                                <mat-error *ngIf="myError('Description', 'required')">
+                                  Description is
+                                  required
+                                </mat-error>
+                                <mat-error *ngIf="myError('Description', 'minlength')">
+                                  Description must be 3 to
+                                  50 characters long
+                                </mat-error>
+                                <mat-error *ngIf="myError('Description', 'maxlength')">Limit exceed</mat-error>
+                                <mat-error *ngIf="myError('Description', 'pattern')">
+                                  Description can not contain
+                                  symbols
+                                </mat-error>
+
+                              </mat-form-field>
+                            </mat-card-content>
+                            
+                          </td>
                         </tr>
 
                     </table>
